--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(Project
         Code/Menu.cpp
         Code/Driving_only.h
         Code/Batch_Mode_read.h
+        Code/Batch_Mode_write.h
 )
 
 #add_executable(Main
